Fix: use variable for z-index

--- a/admin-ui/src/variables.css
+++ b/admin-ui/src/variables.css
@@ -27,6 +27,7 @@
   --tilavaraus-admin-stack-sticky-header: 700;
   --tilavaraus-admin-stack-main-menu: 500;
   --tilavaraus-admin-stack-calendar-buffer: 101;
+  --tilavaraus-admin-stack-select-over-calendar: 11;
   --tilavaraus-calendar-selected: var(--color-bus);
   --tilavaraus-calendar-selected-secondary: #ffe977;
   --font-regular: HelsinkiGrotesk, var(--font-default);
